--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   width: 400px;
   height: 600px;
   padding: 14px;
-  background-color: wheat;
+  background-color: rgb(155, 153, 149);
   border-radius: 15px;
   border: 5px solid black;
 }
