--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,15 @@
   background-color: #1b1b32;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
-.freecodecamp-logo-contenedor{
-  width: 100%;
-  height: 50px;
-  margin: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.freecodecamp-logo{
-  height: 40px;
-}
-
 .contenedor-calculadora{
-  width: 400px;
-  height: 600px;
+  width: 500px;
+  height: 700px;
   padding: 14px;
   background-color: rgb(155, 153, 149);
   border-radius: 15px;
